@@ -7,6 +7,7 @@
 #21 Move contribution API into static methods on BQCoreModule
 #22 Better Module override API
 #24 Allow creation of DefaultBootLogger with non-System stdin/out
+#28 --config option should support both files and URLs
 
 0.11:
 
